src/main/jkube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    jkube.io/scm-url: https://github.com/pablodiazo/athlix
    jkube.io/issue-system: Redmine
    jkube.io/issue-tracker-url: https://redmine.fic.udc.es/project/athlix/issues
    jkube.io/scm-tag: head
  labels:
    app: athlix
    provider: jkube
    version: 0.1-SNAPSHOT
    group: es.udc.fi.dc.fd
  name: athlix
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: athlix
      provider: jkube
      group: es.udc.fi.dc.fd
  template:
    metadata:
      annotations:
        jkube.io/scm-url: https://github.com/pablodiazo/athlix
        jkube.io/issue-system: Redmine
        jkube.io/issue-tracker-url: https://redmine.fic.udc.es/project/athlix/issues
        jkube.io/scm-tag: head
      labels:
        app: athlix
        provider: jkube
        version: 0.1-SNAPSHOT
        group: es.udc.fi.dc.fd
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: HOSTNAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: github.com:5050/pablodiazo/athlix:latest
        imagePullPolicy: Always
        name: deploy-athlix
        securityContext:
          privileged: false
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: fd-reg-cred
